Decrease font size of blog name, page and post titles. Fixes text overflow problem on mobile screens.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -800,7 +800,6 @@ textarea {
 		position: relative;
 		z-index: 10;
 		padding-bottom: calc(4rem + 2vw);
-		text-align: center;
 		border-bottom: 1px solid $color-border;
 		@media (prefers-color-scheme: dark) {
 			border-color: $color-border-dark;
@@ -853,7 +852,7 @@ textarea {
 	margin: 0;
 	padding: 0;
 	font-weight: 700;
-	font-size: 6em;
+	font-size: 4.5rem;
 	line-height: 1em;
 	text-decoration: none;
 	color: $color-text-primary;
@@ -872,7 +871,7 @@ textarea {
 	display: block;
 	margin-top: 1rem;
 	padding: 0;
-	font-size: 3em;
+	font-size: 2rem;
 	line-height: 1.33334em;
 	color: $color-text-secondary;
 	@media (prefers-color-scheme: dark) {
@@ -1768,7 +1767,7 @@ textarea {
 
 .post-header .post-title {
 	margin: 0 0 4rem;
-	font-size: 6em;
+	font-size: 4.5rem;
 	line-height: 1.25em;
 }
 
